Remove console.log from certain questions

--- a/questions/01-values-and-variables/01-02-more.md
+++ b/questions/01-values-and-variables/01-02-more.md
@@ -29,10 +29,10 @@ console.log(username);
 
 ---TESTCASES---
 [
-  { "func": "console.log(age)", "expected": "25", "type": "console" },
-  { "func": "console.log(gst)", "expected": "0.09", "type": "console" },
-  { "func": "console.log(isRaining)", "expected": "false", "type": "console" },
-  { "func": "console.log(username)", "expected": "Samantha Brown", "type": "console" }
+  { "func": "", "expected": "25", "type": "console" },
+  { "func": "", "expected": "0.09", "type": "console" },
+  { "func": "", "expected": "false", "type": "console" },
+  { "func": "", "expected": "Samantha Brown", "type": "console" }
 ]
 
 ---EXPLANATION---
