Update question files

--- a/questions/01-values-and-variables/01-02-more.md
+++ b/questions/01-values-and-variables/01-02-more.md
@@ -29,10 +29,7 @@ console.log(username);
 
 ---TESTCASES---
 [
-  { "func": "", "expected": "25", "type": "console" },
-  { "func": "", "expected": "0.09", "type": "console" },
-  { "func": "", "expected": "false", "type": "console" },
-  { "func": "", "expected": "Samantha Brown", "type": "console" }
+  { "func": "", "expected": "25\n0.09\nfalse\nSamantha Brown", "type": "console" }
 ]
 
 ---EXPLANATION---
